# fairest-server

./: README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: docker_deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: fairest.py  rules.py
backend/app/core/: config.py
backend/app/schemas/: fairest.py  rules.py
backend/app/tests/: test_main.py
backend/app/tests/api/api_v1/: test_fairest.py
frontend/: .gitignore  Dockerfile  README.md  package.json  tailwind.config.js
frontend/components/: footer.js  form.js  header.js  result.jsx  resultsSection.js  resultsSection.test.js
frontend/layout/: layout.js
frontend/pages/: index.jsx
