[tool.poetry]
name = "fairest-server"
version = "0.1.0"
description = ""
authors = ["Ang Houfu <damon.houf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.62"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
python-dotenv = "^0.15.0"
fairest = {git = "https://github.com/houfu/fairest.git"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
